:bug: Fixed model and observation merge

--- a/notebooks/Jonas_1.ipynb
+++ b/notebooks/Jonas_1.ipynb
@@ -848,12 +848,498 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"6\" halign=\"left\">pred_0_days</th>\n",
+       "      <th colspan=\"6\" halign=\"left\">pred_1_days</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">datetime</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>var</th>\n",
+       "      <th>count</th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>var</th>\n",
+       "      <th>count</th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>year</th>\n",
+       "      <th>station</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"7\" valign=\"top\">2013</th>\n",
+       "      <th>ES0691A</th>\n",
+       "      <td>40.05</td>\n",
+       "      <td>28.29</td>\n",
+       "      <td>800.10</td>\n",
+       "      <td>8760</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>168.19</td>\n",
+       "      <td>39.14</td>\n",
+       "      <td>28.03</td>\n",
+       "      <td>785.56</td>\n",
+       "      <td>8759</td>\n",
+       "      <td>1.14</td>\n",
+       "      <td>164.75</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>2013-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES1396A</th>\n",
+       "      <td>35.26</td>\n",
+       "      <td>23.39</td>\n",
+       "      <td>547.19</td>\n",
+       "      <td>8760</td>\n",
+       "      <td>3.93</td>\n",
+       "      <td>181.36</td>\n",
+       "      <td>34.51</td>\n",
+       "      <td>22.81</td>\n",
+       "      <td>520.29</td>\n",
+       "      <td>8759</td>\n",
+       "      <td>3.52</td>\n",
+       "      <td>167.75</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>2013-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES1438A</th>\n",
+       "      <td>49.35</td>\n",
+       "      <td>29.49</td>\n",
+       "      <td>869.59</td>\n",
+       "      <td>8760</td>\n",
+       "      <td>3.05</td>\n",
+       "      <td>197.72</td>\n",
+       "      <td>48.31</td>\n",
+       "      <td>28.67</td>\n",
+       "      <td>822.08</td>\n",
+       "      <td>8759</td>\n",
+       "      <td>2.12</td>\n",
+       "      <td>195.16</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>2013-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES1480A</th>\n",
+       "      <td>38.59</td>\n",
+       "      <td>26.10</td>\n",
+       "      <td>681.37</td>\n",
+       "      <td>8760</td>\n",
+       "      <td>2.82</td>\n",
+       "      <td>159.23</td>\n",
+       "      <td>37.50</td>\n",
+       "      <td>25.37</td>\n",
+       "      <td>643.64</td>\n",
+       "      <td>8759</td>\n",
+       "      <td>3.04</td>\n",
+       "      <td>174.96</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>2013-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES1679A</th>\n",
+       "      <td>49.35</td>\n",
+       "      <td>29.49</td>\n",
+       "      <td>869.59</td>\n",
+       "      <td>8760</td>\n",
+       "      <td>3.05</td>\n",
+       "      <td>197.72</td>\n",
+       "      <td>48.31</td>\n",
+       "      <td>28.67</td>\n",
+       "      <td>822.08</td>\n",
+       "      <td>8759</td>\n",
+       "      <td>2.12</td>\n",
+       "      <td>195.16</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>2013-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES1856A</th>\n",
+       "      <td>38.59</td>\n",
+       "      <td>26.10</td>\n",
+       "      <td>681.37</td>\n",
+       "      <td>8760</td>\n",
+       "      <td>2.82</td>\n",
+       "      <td>159.23</td>\n",
+       "      <td>37.50</td>\n",
+       "      <td>25.37</td>\n",
+       "      <td>643.64</td>\n",
+       "      <td>8759</td>\n",
+       "      <td>3.04</td>\n",
+       "      <td>174.96</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>2013-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES1992A</th>\n",
+       "      <td>35.26</td>\n",
+       "      <td>23.39</td>\n",
+       "      <td>547.19</td>\n",
+       "      <td>8760</td>\n",
+       "      <td>3.93</td>\n",
+       "      <td>181.36</td>\n",
+       "      <td>34.51</td>\n",
+       "      <td>22.81</td>\n",
+       "      <td>520.29</td>\n",
+       "      <td>8759</td>\n",
+       "      <td>3.52</td>\n",
+       "      <td>167.75</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>2013-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"7\" valign=\"top\">2014</th>\n",
+       "      <th>ES0691A</th>\n",
+       "      <td>41.69</td>\n",
+       "      <td>30.56</td>\n",
+       "      <td>933.68</td>\n",
+       "      <td>8760</td>\n",
+       "      <td>1.43</td>\n",
+       "      <td>189.77</td>\n",
+       "      <td>40.11</td>\n",
+       "      <td>30.48</td>\n",
+       "      <td>928.95</td>\n",
+       "      <td>8759</td>\n",
+       "      <td>1.19</td>\n",
+       "      <td>188.68</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>2014-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES1396A</th>\n",
+       "      <td>36.01</td>\n",
+       "      <td>23.77</td>\n",
+       "      <td>565.03</td>\n",
+       "      <td>8760</td>\n",
+       "      <td>3.99</td>\n",
+       "      <td>166.05</td>\n",
+       "      <td>35.26</td>\n",
+       "      <td>23.02</td>\n",
+       "      <td>529.72</td>\n",
+       "      <td>8759</td>\n",
+       "      <td>4.43</td>\n",
+       "      <td>171.68</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>2014-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES1438A</th>\n",
+       "      <td>52.75</td>\n",
+       "      <td>31.47</td>\n",
+       "      <td>990.29</td>\n",
+       "      <td>8760</td>\n",
+       "      <td>4.03</td>\n",
+       "      <td>225.09</td>\n",
+       "      <td>51.04</td>\n",
+       "      <td>30.55</td>\n",
+       "      <td>933.51</td>\n",
+       "      <td>8759</td>\n",
+       "      <td>3.95</td>\n",
+       "      <td>239.08</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>2014-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES1480A</th>\n",
+       "      <td>40.40</td>\n",
+       "      <td>27.23</td>\n",
+       "      <td>741.38</td>\n",
+       "      <td>8760</td>\n",
+       "      <td>3.14</td>\n",
+       "      <td>175.37</td>\n",
+       "      <td>39.46</td>\n",
+       "      <td>26.89</td>\n",
+       "      <td>722.99</td>\n",
+       "      <td>8759</td>\n",
+       "      <td>3.98</td>\n",
+       "      <td>183.37</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>2014-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES1679A</th>\n",
+       "      <td>52.75</td>\n",
+       "      <td>31.47</td>\n",
+       "      <td>990.29</td>\n",
+       "      <td>8760</td>\n",
+       "      <td>4.03</td>\n",
+       "      <td>225.09</td>\n",
+       "      <td>51.04</td>\n",
+       "      <td>30.55</td>\n",
+       "      <td>933.51</td>\n",
+       "      <td>8759</td>\n",
+       "      <td>3.95</td>\n",
+       "      <td>239.08</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>2014-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES1856A</th>\n",
+       "      <td>40.40</td>\n",
+       "      <td>27.23</td>\n",
+       "      <td>741.38</td>\n",
+       "      <td>8760</td>\n",
+       "      <td>3.14</td>\n",
+       "      <td>175.37</td>\n",
+       "      <td>39.46</td>\n",
+       "      <td>26.89</td>\n",
+       "      <td>722.99</td>\n",
+       "      <td>8759</td>\n",
+       "      <td>3.98</td>\n",
+       "      <td>183.37</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>2014-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES1992A</th>\n",
+       "      <td>36.01</td>\n",
+       "      <td>23.77</td>\n",
+       "      <td>565.03</td>\n",
+       "      <td>8760</td>\n",
+       "      <td>3.99</td>\n",
+       "      <td>166.05</td>\n",
+       "      <td>35.26</td>\n",
+       "      <td>23.02</td>\n",
+       "      <td>529.72</td>\n",
+       "      <td>8759</td>\n",
+       "      <td>4.43</td>\n",
+       "      <td>171.68</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>2014-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"7\" valign=\"top\">2015</th>\n",
+       "      <th>ES0691A</th>\n",
+       "      <td>38.40</td>\n",
+       "      <td>30.05</td>\n",
+       "      <td>903.02</td>\n",
+       "      <td>8664</td>\n",
+       "      <td>1.24</td>\n",
+       "      <td>152.71</td>\n",
+       "      <td>36.34</td>\n",
+       "      <td>29.53</td>\n",
+       "      <td>871.80</td>\n",
+       "      <td>8664</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>145.46</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>2015-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES1396A</th>\n",
+       "      <td>36.81</td>\n",
+       "      <td>25.51</td>\n",
+       "      <td>650.98</td>\n",
+       "      <td>8664</td>\n",
+       "      <td>3.38</td>\n",
+       "      <td>179.40</td>\n",
+       "      <td>36.33</td>\n",
+       "      <td>24.82</td>\n",
+       "      <td>616.16</td>\n",
+       "      <td>8664</td>\n",
+       "      <td>3.70</td>\n",
+       "      <td>155.44</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>2015-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES1438A</th>\n",
+       "      <td>48.63</td>\n",
+       "      <td>30.55</td>\n",
+       "      <td>933.05</td>\n",
+       "      <td>8664</td>\n",
+       "      <td>3.71</td>\n",
+       "      <td>182.38</td>\n",
+       "      <td>47.26</td>\n",
+       "      <td>29.88</td>\n",
+       "      <td>893.00</td>\n",
+       "      <td>8664</td>\n",
+       "      <td>2.86</td>\n",
+       "      <td>159.00</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>2015-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES1480A</th>\n",
+       "      <td>41.10</td>\n",
+       "      <td>29.64</td>\n",
+       "      <td>878.63</td>\n",
+       "      <td>8664</td>\n",
+       "      <td>3.77</td>\n",
+       "      <td>194.44</td>\n",
+       "      <td>40.29</td>\n",
+       "      <td>28.71</td>\n",
+       "      <td>824.51</td>\n",
+       "      <td>8664</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>168.40</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>2015-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES1679A</th>\n",
+       "      <td>48.63</td>\n",
+       "      <td>30.55</td>\n",
+       "      <td>933.05</td>\n",
+       "      <td>8664</td>\n",
+       "      <td>3.71</td>\n",
+       "      <td>182.38</td>\n",
+       "      <td>47.26</td>\n",
+       "      <td>29.88</td>\n",
+       "      <td>893.00</td>\n",
+       "      <td>8664</td>\n",
+       "      <td>2.86</td>\n",
+       "      <td>159.00</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>2015-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES1856A</th>\n",
+       "      <td>41.10</td>\n",
+       "      <td>29.64</td>\n",
+       "      <td>878.63</td>\n",
+       "      <td>8664</td>\n",
+       "      <td>3.77</td>\n",
+       "      <td>194.44</td>\n",
+       "      <td>40.29</td>\n",
+       "      <td>28.71</td>\n",
+       "      <td>824.51</td>\n",
+       "      <td>8664</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>168.40</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>2015-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES1992A</th>\n",
+       "      <td>36.81</td>\n",
+       "      <td>25.51</td>\n",
+       "      <td>650.98</td>\n",
+       "      <td>8664</td>\n",
+       "      <td>3.38</td>\n",
+       "      <td>179.40</td>\n",
+       "      <td>36.33</td>\n",
+       "      <td>24.82</td>\n",
+       "      <td>616.16</td>\n",
+       "      <td>8664</td>\n",
+       "      <td>3.70</td>\n",
+       "      <td>155.44</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>2015-12-31 23:00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             pred_0_days                                pred_1_days        \\\n",
+       "                    mean   std    var count  min    max        mean   std   \n",
+       "year station                                                                \n",
+       "2013 ES0691A       40.05 28.29 800.10  8760 0.73 168.19       39.14 28.03   \n",
+       "     ES1396A       35.26 23.39 547.19  8760 3.93 181.36       34.51 22.81   \n",
+       "     ES1438A       49.35 29.49 869.59  8760 3.05 197.72       48.31 28.67   \n",
+       "     ES1480A       38.59 26.10 681.37  8760 2.82 159.23       37.50 25.37   \n",
+       "     ES1679A       49.35 29.49 869.59  8760 3.05 197.72       48.31 28.67   \n",
+       "     ES1856A       38.59 26.10 681.37  8760 2.82 159.23       37.50 25.37   \n",
+       "     ES1992A       35.26 23.39 547.19  8760 3.93 181.36       34.51 22.81   \n",
+       "2014 ES0691A       41.69 30.56 933.68  8760 1.43 189.77       40.11 30.48   \n",
+       "     ES1396A       36.01 23.77 565.03  8760 3.99 166.05       35.26 23.02   \n",
+       "     ES1438A       52.75 31.47 990.29  8760 4.03 225.09       51.04 30.55   \n",
+       "     ES1480A       40.40 27.23 741.38  8760 3.14 175.37       39.46 26.89   \n",
+       "     ES1679A       52.75 31.47 990.29  8760 4.03 225.09       51.04 30.55   \n",
+       "     ES1856A       40.40 27.23 741.38  8760 3.14 175.37       39.46 26.89   \n",
+       "     ES1992A       36.01 23.77 565.03  8760 3.99 166.05       35.26 23.02   \n",
+       "2015 ES0691A       38.40 30.05 903.02  8664 1.24 152.71       36.34 29.53   \n",
+       "     ES1396A       36.81 25.51 650.98  8664 3.38 179.40       36.33 24.82   \n",
+       "     ES1438A       48.63 30.55 933.05  8664 3.71 182.38       47.26 29.88   \n",
+       "     ES1480A       41.10 29.64 878.63  8664 3.77 194.44       40.29 28.71   \n",
+       "     ES1679A       48.63 30.55 933.05  8664 3.71 182.38       47.26 29.88   \n",
+       "     ES1856A       41.10 29.64 878.63  8664 3.77 194.44       40.29 28.71   \n",
+       "     ES1992A       36.81 25.51 650.98  8664 3.38 179.40       36.33 24.82   \n",
+       "\n",
+       "                                        datetime                      \n",
+       "                var count  min    max        min                 max  \n",
+       "year station                                                          \n",
+       "2013 ES0691A 785.56  8759 1.14 164.75 2013-01-01 2013-12-31 23:00:00  \n",
+       "     ES1396A 520.29  8759 3.52 167.75 2013-01-01 2013-12-31 23:00:00  \n",
+       "     ES1438A 822.08  8759 2.12 195.16 2013-01-01 2013-12-31 23:00:00  \n",
+       "     ES1480A 643.64  8759 3.04 174.96 2013-01-01 2013-12-31 23:00:00  \n",
+       "     ES1679A 822.08  8759 2.12 195.16 2013-01-01 2013-12-31 23:00:00  \n",
+       "     ES1856A 643.64  8759 3.04 174.96 2013-01-01 2013-12-31 23:00:00  \n",
+       "     ES1992A 520.29  8759 3.52 167.75 2013-01-01 2013-12-31 23:00:00  \n",
+       "2014 ES0691A 928.95  8759 1.19 188.68 2014-01-01 2014-12-31 23:00:00  \n",
+       "     ES1396A 529.72  8759 4.43 171.68 2014-01-01 2014-12-31 23:00:00  \n",
+       "     ES1438A 933.51  8759 3.95 239.08 2014-01-01 2014-12-31 23:00:00  \n",
+       "     ES1480A 722.99  8759 3.98 183.37 2014-01-01 2014-12-31 23:00:00  \n",
+       "     ES1679A 933.51  8759 3.95 239.08 2014-01-01 2014-12-31 23:00:00  \n",
+       "     ES1856A 722.99  8759 3.98 183.37 2014-01-01 2014-12-31 23:00:00  \n",
+       "     ES1992A 529.72  8759 4.43 171.68 2014-01-01 2014-12-31 23:00:00  \n",
+       "2015 ES0691A 871.80  8664 1.09 145.46 2015-01-01 2015-12-31 23:00:00  \n",
+       "     ES1396A 616.16  8664 3.70 155.44 2015-01-01 2015-12-31 23:00:00  \n",
+       "     ES1438A 893.00  8664 2.86 159.00 2015-01-01 2015-12-31 23:00:00  \n",
+       "     ES1480A 824.51  8664 3.20 168.40 2015-01-01 2015-12-31 23:00:00  \n",
+       "     ES1679A 893.00  8664 2.86 159.00 2015-01-01 2015-12-31 23:00:00  \n",
+       "     ES1856A 824.51  8664 3.20 168.40 2015-01-01 2015-12-31 23:00:00  \n",
+       "     ES1992A 616.16  8664 3.70 155.44 2015-01-01 2015-12-31 23:00:00  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "models.groupby(['year', 'station']).agg({\n",
-    "    'Concentration': ['mean', 'std', 'var', 'count', 'min', 'max'],\n",
+    "    'pred_0_days': ['mean', 'std', 'var', 'count', 'min', 'max'],\n",
+    "    'pred_1_days': ['mean', 'std', 'var', 'count', 'min', 'max'],\n",
     "    'datetime': ['min', 'max']\n",
     "})"
    ]
