:alien: Start building ensemble cv

--- a/notebooks/Jonas_1.ipynb
+++ b/notebooks/Jonas_1.ipynb
@@ -1291,6 +1291,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(159719, 7)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observations.drop_duplicates(['datetime', 'station']).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
