--- a/notebooks/Jonas_3.ipynb
+++ b/notebooks/Jonas_3.ipynb
@@ -2364,6 +2364,82 @@
     "        plt.axhline(100, c='y')\n",
     "        plt.axhline(130, c='g')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('ES1438A', 634.65030524237397),\n",
+       " ('ES1396A', 549.77879977684972),\n",
+       " ('ES0691A', 357.55035029793856),\n",
+       " ('ES1480A', 578.72624419840201),\n",
+       " ('ES1856A', 547.69752227398919),\n",
+       " ('ES1679A', 379.74367886383203),\n",
+       " ('ES1992A', 662.35596367399455)]"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.metrics import log_loss, precision_score, recall_score, mean_squared_error\n",
+    "\n",
+    "lags = 10\n",
+    "kf = KFold(n_splits=3)\n",
+    "metric_by_station = []\n",
+    "for s in obs_and_mods.station.unique():\n",
+    "    data = wide_series[list(wide_series.reset_index().day < '2015-01-01')]\n",
+    "    to_lag = data[[c for c in data.columns if not c in ['{}_{}'.format(s, agg) for agg in agg_types]]]\n",
+    "    features = pd.concat([\n",
+    "        create_lagged_features(to_lag, lags),\n",
+    "        obs_and_mods[obs_and_mods.station == s].groupby('day').max()\n",
+    "    ], axis=1).dropna()\n",
+    "    X = features[[c for c in features.columns if not c in [\n",
+    "        'time', 'datetime', 'Concentration', 'target', 'station'\n",
+    "    ]]].values\n",
+    "    y = features['Concentration'].values\n",
+    "    metric = []\n",
+    "    for train_index, test_index in kf.split(X):\n",
+    "        X_train, X_test = X[train_index], X[test_index]\n",
+    "        y_train, y_test = y[train_index], y[test_index]\n",
+    "        model = xgb.XGBRegressor(n_estimators=100)\n",
+    "        model.fit(X_train, y_train)\n",
+    "        y_pred = model.predict(X_test)\n",
+    "        metric.append(\n",
+    "            mean_squared_error(y_test, y_pred)\n",
+    "        ) \n",
+    "        \n",
+    "    metric_by_station.append((s, np.mean(metric)))\n",
+    "    \n",
+    "metric_by_station"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "530.07183776105433"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean([e[1] for e in metric_by_station])"
+   ]
   }
  ],
  "metadata": {
