More cross-validation

--- a/notebooks/Jonas_4.ipynb
+++ b/notebooks/Jonas_4.ipynb
@@ -489,7 +489,91 @@
       "n_estimators   160.00\n",
       "reg_alpha        0.28\n",
       "score          630.93\n",
-      "Name: 2, dtype: float64\n"
+      "Name: 2, dtype: float64\n",
+      "eta              0.49\n",
+      "max_depth       56.00\n",
+      "n_estimators   188.00\n",
+      "reg_alpha        0.71\n",
+      "score          646.78\n",
+      "Name: 3, dtype: float64\n",
+      "eta              0.10\n",
+      "max_depth       31.00\n",
+      "n_estimators    74.00\n",
+      "reg_alpha        0.83\n",
+      "score          624.88\n",
+      "Name: 4, dtype: float64\n",
+      "eta              0.32\n",
+      "max_depth        3.00\n",
+      "n_estimators    71.00\n",
+      "reg_alpha        0.66\n",
+      "score          663.81\n",
+      "Name: 5, dtype: float64\n",
+      "eta              0.99\n",
+      "max_depth       14.00\n",
+      "n_estimators   175.00\n",
+      "reg_alpha        0.44\n",
+      "score          622.39\n",
+      "Name: 6, dtype: float64\n",
+      "eta              0.57\n",
+      "max_depth       26.00\n",
+      "n_estimators   146.00\n",
+      "reg_alpha        0.40\n",
+      "score          648.07\n",
+      "Name: 7, dtype: float64\n",
+      "eta              1.05\n",
+      "max_depth       32.00\n",
+      "n_estimators   228.00\n",
+      "reg_alpha        0.01\n",
+      "score          635.85\n",
+      "Name: 8, dtype: float64\n",
+      "eta                1.60\n",
+      "max_depth         49.00\n",
+      "n_estimators       1.00\n",
+      "reg_alpha          0.29\n",
+      "score          4,223.17\n",
+      "Name: 9, dtype: float64\n",
+      "eta              0.35\n",
+      "max_depth       24.00\n",
+      "n_estimators   245.00\n",
+      "reg_alpha        0.79\n",
+      "score          614.99\n",
+      "Name: 10, dtype: float64\n",
+      "eta              0.15\n",
+      "max_depth       36.00\n",
+      "n_estimators   103.00\n",
+      "reg_alpha        0.85\n",
+      "score          629.37\n",
+      "Name: 11, dtype: float64\n",
+      "eta              0.56\n",
+      "max_depth       44.00\n",
+      "n_estimators    82.00\n",
+      "reg_alpha        0.23\n",
+      "score          622.66\n",
+      "Name: 12, dtype: float64\n",
+      "eta              1.79\n",
+      "max_depth       58.00\n",
+      "n_estimators    55.00\n",
+      "reg_alpha        0.61\n",
+      "score          637.65\n",
+      "Name: 13, dtype: float64\n",
+      "eta              0.93\n",
+      "max_depth       17.00\n",
+      "n_estimators    20.00\n",
+      "reg_alpha        0.38\n",
+      "score          731.00\n",
+      "Name: 14, dtype: float64\n",
+      "eta              1.23\n",
+      "max_depth       59.00\n",
+      "n_estimators   183.00\n",
+      "reg_alpha        0.24\n",
+      "score          620.96\n",
+      "Name: 15, dtype: float64\n",
+      "eta              1.02\n",
+      "max_depth        6.00\n",
+      "n_estimators   192.00\n",
+      "reg_alpha        0.68\n",
+      "score          664.28\n",
+      "Name: 16, dtype: float64\n"
      ]
     }
    ],
