--- a/notebooks/Jonas_6.ipynb
+++ b/notebooks/Jonas_6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,8 +34,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test = pd.read_csv('../data/targets.csv')\n",
@@ -43,12 +45,13 @@
     "extra_features = pd.read_csv('/Users/jonaspaulwestermann/Downloads/dataset_v1.csv', index_col=0).drop([\n",
     "    'holiday', 'target', \n",
     "], axis=1)\n",
+    "rolling_mean_features = pd.read_csv('../data/data_roll_day_conc_obs.csv')\n",
     "extra_features = extra_features[[c for c in extra_features.columns if not 'dist' in c]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +179,7 @@
        "4  2013-01-01 00:00:00  00:00:00            nan     nan  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +438,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +466,7 @@
        "       'ES1992A'], dtype=object)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,56 +479,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "eta              0.25\n",
-      "max_depth        6.00\n",
-      "n_estimators   135.00\n",
-      "reg_alpha        0.09\n",
-      "score          609.72\n",
-      "Name: 0, dtype: float64\n",
-      "eta              0.65\n",
-      "max_depth       34.00\n",
-      "n_estimators   189.00\n",
-      "reg_alpha        0.47\n",
-      "score          633.20\n",
-      "Name: 1, dtype: float64\n",
-      "eta              0.32\n",
-      "max_depth        4.00\n",
-      "n_estimators   162.00\n",
-      "reg_alpha        0.04\n",
-      "score          631.46\n",
-      "Name: 2, dtype: float64\n",
-      "eta              0.56\n",
-      "max_depth        9.00\n",
-      "n_estimators   243.00\n",
-      "reg_alpha        0.27\n",
-      "score          613.56\n",
-      "Name: 3, dtype: float64\n",
-      "eta              1.10\n",
-      "max_depth       18.00\n",
-      "n_estimators   207.00\n",
-      "reg_alpha        0.65\n",
-      "score          644.19\n",
-      "Name: 4, dtype: float64\n",
-      "eta              0.29\n",
-      "max_depth       31.00\n",
-      "n_estimators    93.00\n",
-      "reg_alpha        0.47\n",
-      "score          640.89\n",
-      "Name: 5, dtype: float64\n",
-      "eta              1.33\n",
-      "max_depth        1.00\n",
-      "n_estimators    91.00\n",
-      "reg_alpha        0.23\n",
-      "score          602.77\n",
-      "Name: 6, dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import RandomizedSearchCV, KFold\n",
     "from sklearn.metrics import mean_squared_error, make_scorer\n",
@@ -536,7 +490,8 @@
     "data = wide_series[list(wide_series.reset_index().day < '2015-01-01')]\n",
     "to_lag = data[[c for c in data.columns if not c in ['{}_{}'.format(s, agg) for agg in agg_types]]]\n",
     "features = create_lagged_features(to_lag, lags)\\\n",
-    "    .join(extra_features_train[extra_features_train.station == s].set_index('date'))\\\n",
+    "    .join(extra_features[extra_features.station == s].set_index('date'))\\\n",
+    "    .join(rolling_mean_features[rolling_mean_features.station == s].set_index('date').drop('station', axis=1))\\\n",
     "    .join(obs_and_mods[obs_and_mods.station == s][['Concentration', 'day']].groupby('day').max())\n",
     "X = features[[c for c in features.columns if not c in [\n",
     "    'time', 'datetime', 'Concentration', 'target', 'station'\n",
@@ -569,8 +524,8 @@
     "    params.loc[i, 'score'] = np.mean(metric)\n",
     "    print(params.iloc[i])\n",
     "    \n",
-    "params.to_csv('../reports/cv_xgb_Jonas_5_{}_{}.csv'\n",
-    "              .format(s, len(glob.glob('../reports/cv_xgb_Jonas_5_{}_*'.format(s)))))\n",
+    "params.to_csv('../reports/cv_xgb_Jonas_6_{}_{}.csv'\n",
+    "              .format(s, len(glob.glob('../reports/cv_xgb_Jonas_6_{}_*'.format(s)))))\n",
     "params.head()"
    ]
   },
@@ -581,53 +536,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "from sklearn.model_selection import RandomizedSearchCV, KFold\n",
-    "from sklearn.metrics import mean_squared_error, make_scorer\n",
-    "\n",
-    "lags = 25\n",
-    "s = 'ES1480A'\n",
-    "\n",
-    "data = wide_series[list(wide_series.reset_index().day < '2015-01-01')]\n",
-    "to_lag = data[[c for c in data.columns if not c in ['{}_{}'.format(s, agg) for agg in agg_types]]]\n",
-    "features = create_lagged_features(to_lag, lags)\\\n",
-    "    .join(extra_features_train[extra_features_train.station == s].set_index('date'))\\\n",
-    "    .join(obs_and_mods[obs_and_mods.station == s][['Concentration', 'day']].groupby('day').max())\n",
-    "X = features[[c for c in features.columns if not c in [\n",
-    "    'time', 'datetime', 'Concentration', 'target', 'station'\n",
-    "]]].values\n",
-    "y = features['Concentration'].fillna(method='ffill').values\n",
-    "\n",
-    "params = pd.DataFrame({\n",
-    "    'eta': random.sample(list(np.linspace(0.01, 2, 201)), 200),\n",
-    "    'n_estimators': random.sample(list(range(1, 250)), 200),\n",
-    "    'reg_alpha': random.sample(list(np.linspace(0.01, 1, 201)), 200),\n",
-    "    'max_depth': random.sample(list(range(1, 35)), 25) * 8,\n",
-    "    'score': [np.nan] * 200\n",
-    "})\n",
-    "for i, r in params[['eta', 'n_estimators', 'reg_alpha', 'max_depth']].iterrows():\n",
-    "    kf = KFold(n_splits=3)\n",
-    "    metric = []\n",
-    "    for train_index, test_index in kf.split(X):\n",
-    "        X_train, X_test = X[train_index], X[test_index]\n",
-    "        y_train, y_test = y[train_index], y[test_index]\n",
-    "        p = dict(r)\n",
-    "        p['n_estimators'] = int(p['n_estimators'])\n",
-    "        p['max_depth'] = int(p['max_depth'])\n",
-    "        model = xgb.XGBRegressor(**p)\n",
-    "        model.fit(X_train, y_train)\n",
-    "        y_pred = model.predict(X_test)\n",
-    "        metric.append(\n",
-    "            mean_squared_error(y_test, y_pred)\n",
-    "        ) \n",
-    "        \n",
-    "    params.loc[i, 'score'] = np.mean(metric)\n",
-    "    print(params.iloc[i])\n",
-    "    \n",
-    "params.to_csv('../reports/cv_xgb_Jonas_5_{}_{}.csv'\n",
-    "              .format(s, len(glob.glob('../reports/cv_xgb_Jonas_5_{}_*'.format(s)))))\n",
-    "params.head()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
